added simple map

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 body {
- Box-sizing:border-Box;
+ box-sizing:border-box;
 }
 
+#map {
+    height: 100%;
+  }
+  
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
