--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,48 @@ body {
  box-sizing:border-box;
 }
 
-#map {
-    height: 100%;
-  }
   
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
   }
+  #map {
+    height: 100%;
+    width:100%;
+    position:absolute;
+    top:0px;
+    left:0px;
+   }
+   #container {
+    width:100%;
+    height:95%;
+    position: relative;
+}
+#menu {
+   width: 15%;
+    height: 50%;
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    color: red;
+   background: #fff;
+   border: 1px solid #999;
+    z-index: 10;	
+}
+.panel
+{
+	text-align:center;
+	height:5%;
+}
+.hamburger{
+	float:left;
+}
+.text
+{
+	font-size: 24px;
+}
+#menu
+{
+	display:none;
+}
