--- a/css/style.css
+++ b/css/style.css
@@ -18,32 +18,51 @@ html, body {
    #container {
     width:100%;
     height:95%;
-    position: relative;
+    position: absolute;
 }
 #menu {
-   width: 15%;
-    height: 50%;
+   width: 200px;
+    height: 200px;
     position: absolute;
     top: 50px;
     left: 10px;
-    color: red;
-   background: #fff;
-   border: 1px solid #999;
-    z-index: 10;	
+    color: #B7B8B6;
+    background: #324851;
+    border: 1px solid #34675C;
+    z-index: 5;	
+   
 }
 .panel
 {
 	text-align:center;
 	height:5%;
+	background-color: #011A27
 }
 .hamburger{
+	margin-top:0.3em;
 	float:left;
 }
 .text
 {
 	font-size: 24px;
+	color: #fff;
 }
 #menu
 {
 	display:none;
+
+}
+.controls {
+   padding-top:0.5em;
+   padding-left: 0.5em;
+   margin-top:0.5em;
+   margin-left: 0.5em;
+}
+#list {
+	overflow: visible;
+	list-style-type: none;
+}
+li:hover {
+	background-color: #4F6457;
+	cursor:pointer;
 }
